Replace deprecated newInstance call.